Add test save button and function for isolated PNG save testing

--- a/TestCursorPlugin/index.html
+++ b/TestCursorPlugin/index.html
@@ -40,6 +40,7 @@
                 </div>
                 <button id="processText" class="primary-button">Process CSV</button>
                 <button id="stopProcessingBtn" class="stop-button" style="display: none;">Stop Processing</button>
+                <button id="testSaveBtn" class="primary-button">Test Single Save</button>
             </div>
 
             <div class="section">
